[GLAM-909] remove ng-ui-switch, fix wrong alignment resolutions, fix missing styles and missing sections in templates

--- a/src/app/navbar/expandable-navbar-section/expandable-navbar-section.component.scss
+++ b/src/app/navbar/expandable-navbar-section/expandable-navbar-section.component.scss
@@ -1,24 +1,38 @@
-:host {
-  .ds-menu-item-wrapper {
-    position: relative; // align dropdown menu with respect to this element
-  }
+.expandable-navbar-section {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+}
 
+.dropdown-menu {
+  background-color: var(--ds-expandable-navbar-bg);
+  overflow: hidden;
+  min-width: 100%;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  ::ng-deep a.nav-link {
+    color: var(--ds-expandable-navbar-link-color) !important;
+    padding-right: var(--bs-spacer);
+    padding-left: var(--bs-spacer);
+    white-space: nowrap;
+
+    &:hover, &:focus {
+      color: var(--ds-expandable-navbar-link-color-hover) !important;
+    }
+  }
+}
+
+/** Mobile menu styling **/
+@media screen and (max-width: map-get($grid-breakpoints, md)) {
+  .dropdown-toggle {
+    &:after {
+      float: right;
+      margin-top: calc(var(--bs-spacer) / 2);
+    }
+  }
   .dropdown-menu {
-    overflow: hidden;
-    @include media-breakpoint-down(sm) {
-      border: 0;
-      background-color: var(--ds-expandable-navbar-bg);
-    }
-    @include media-breakpoint-up(md) {
-      border-top-left-radius: 0;
-      border-top-right-radius: 0;
-      background-color: var(--ds-navbar-dropdown-bg);
-    }
-  }
+    border: 0;
 
-  .toggle-menu-icon {
-    &, &:hover {
-      text-decoration: none;
-    }
   }
 }
